# feed-aggregator

./: .gitignore  .travis.yml  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/feed_aggregator/: __init__.py  app.py  exceptions.py  server.py
src/feed_aggregator/middlewares/: __init__.py  server_headers.py
src/feed_aggregator/routes/: __init__.py  base_router.py  default.py  router.py
tests/: __init__.py  test_feed_aggregator.py  test_server_headers.py
