[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feed_aggregator"
version = "0.1.0"
description = "FastAPI Server to handle incoming data from multiple sources and aggregate for further processing"
readme = "README.rst"
authors = [
  {name = "Lukas", email = "dev@example.com"}
]
maintainers = [
  {name = "Lukas", email = "dev@example.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/cryptassic/feed_aggregator/issues"
changelog = "https://github.com/cryptassic/feed_aggregator/blob/master/changelog.md"
homepage = "https://github.com/cryptassic/feed_aggregator"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

